# CONNY_S

./: Cargo.toml  README.md  index.html  styles.css  todo.txt
src/: app.rs  backups.rs  chat.rs  helpers.rs  loading.rs  main.rs  not_found.rs  settings.rs  sign_in.rs  sign_up.rs  sorting.rs  upcoming.rs  updates.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  backup.rs  chatbot.rs  configuration.rs  functions.rs  get_dirs.rs  get_input.rs  main.rs  monitoring.rs  notifications.rs  sorting.rs  updates.rs
