[package]
name = "conny_s"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
notify-rust = "4.10.0"
firebase-rs = "2.0.9"
serde_json = "1.0"
sys-info = "0.9.1"
fd-find = "9.0.0"
infer = "0.15.0"
walkdir = "2.3"
dirs = "5.0.1"
notify = "5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
